# A.W.A.R.E.

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
aware/: __init__.py
aware/agents/: __init__.py  __main__.py  agents.py  bus.py  orchestrator.py  policies.py
aware/backend/: __init__.py  app.py  db.py  main.py  models.py  schemas.py  utils.py
aware/backend/energy/: __init__.py  service.py
aware/backend/isolation/: __init__.py  config.py  network.py  planner.py  state.py
aware/backend/ux/: __init__.py  service.py
aware/infra/policies/: phase-06-policy.yaml
aware/ml/: __init__.py  __main__.py
aware/ml/datasets/: __init__.py  leak_generator.py
aware/ml/detectors/: __init__.py  rule_based.py
aware/ml/energy/: __init__.py  forecasting.py  optimizer.py  scheduling.py
aware/sim/: __init__.py  __main__.py  config.py  network.py  replay.py  simulator.py  tariff_loader.py  telemetry.py
aware/sim/assets/: tariff_day_ahead.csv
aware/tests/: conftest.py  test_agents.py  test_dashboard.py  test_energy.py  test_ingestion_api.py  test_isolation.py  test_leak_detection.py  test_placeholder.py  test_replay.py  test_simulator.py  utils.py
aware/web/: README.md
docs/: demo-script-phase-07.md  index.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  risk-log.md
docs/adr/: ADR-001-scope-and-success-metrics.md
docs/journeys/: alex-maya-jordan.md
docs/samples/: telemetry_sample.csv
