[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aware"
version = "0.0.0"
description = "A.W.A.R.E. — Agent for Water Autonomy, Resilience, and Efficiency"
authors = [
  { name = "Team A.W.A.R.E" }
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.1",
  "sqlalchemy==2.0.32",
  "psycopg[binary]==3.1.19",
  "pydantic==2.8.2",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "wntr==1.3.2",
  "pyyaml==6.0.1",
  "python-dotenv==1.0.1",
]

[tool.mypy]
python_version = "3.11"
packages = ["aware"]
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
show-fixes = true
src = ["aware"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B008"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --color=yes"
testpaths = ["aware/tests"]
